--- a/notebooks/PandasOneHotEncoding.ipynb
+++ b/notebooks/PandasOneHotEncoding.ipynb
@@ -8561,7 +8561,7 @@
     }
    ],
    "source": [
-    "default_ds.upload_files(files=['./data/student-mat-ohe.csv', './data/student-mat-csv.csv'], # Upload the diabetes csv files in /data\n",
+    "default_ds.upload_files(files=['../data/student-mat-ohe.csv', '../data/student-mat-csv.csv'], # Upload the diabetes csv files in /data\n",
     "                       target_path='student-data/', # Put it in a folder path in the datastore\n",
     "                       overwrite=True, # Replace existing files of the same name\n",
     "                       show_progress=True)"
@@ -9266,22 +9266,6 @@
     "    dataset = Dataset.get_by_name(ws, dataset_name)\n",
     "    print(\"\\t\", dataset.name, 'version', dataset.version)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b4b6bf4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "030ef359",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
