--- a/notebooks/PandasOneHotEncodingDetail.ipynb
+++ b/notebooks/PandasOneHotEncodingDetail.ipynb
@@ -8381,7 +8381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guardianfinal.to_csv(r'../data/student-mat-ohe.csv', index = False)\n",
+    "guardianfinal.to_csv(r'../data/student-mat-ohe-detail.csv', index = False)\n",
     "student_mat_data.to_csv(r'../data/student-mat-csv.csv')\n"
    ]
   },
@@ -8561,8 +8561,8 @@
     }
    ],
    "source": [
-    "default_ds.upload_files(files=['../data/student-mat-ohe.csv', '../data/student-mat-csv.csv'], # Upload the diabetes csv files in /data\n",
-    "                       target_path='student-data/', # Put it in a folder path in the datastore\n",
+    "default_ds.upload_files(files=['../data/student-mat-ohe-detail.csv'], # Upload the csv files in /data\n",
+    "                       target_path='student-ohe-detail-data/', # Put it in a folder path in the datastore\n",
     "                       overwrite=True, # Replace existing files of the same name\n",
     "                       show_progress=True)"
    ]
@@ -9177,7 +9177,7 @@
     "default_ds = ws.get_default_datastore()\n",
     "\n",
     "#Create a tabular dataset from the path on the datastore (this may take a short while)\n",
-    "tab_data_set = Dataset.Tabular.from_delimited_files(path=(default_ds, 'student-data/*.csv'))\n",
+    "tab_data_set = Dataset.Tabular.from_delimited_files(path=(default_ds, 'student-ohe-detail-data/*.csv'))\n",
     "\n",
     "# Display the first 20 rows as a Pandas dataframe\n",
     "tab_data_set.take(20).to_pandas_dataframe()"
@@ -9205,8 +9205,8 @@
     "# Register the tabular dataset\n",
     "try:\n",
     "    tab_data_set = tab_data_set.register(workspace=ws, \n",
-    "                                        name='student dataset',\n",
-    "                                        description='student data',\n",
+    "                                        name='student ohe detail dataset',\n",
+    "                                        description='student data with one hot encoding detail',\n",
     "                                        tags = {'format':'CSV'},\n",
     "                                        create_new_version=True)\n",
     "except Exception as ex:\n",
