--- a/notebooks/PandasOneHotEncodingDetail.ipynb
+++ b/notebooks/PandasOneHotEncodingDetail.ipynb
@@ -8381,8 +8381,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guardianfinal.to_csv(r'../data/student-mat-ohe-detail.csv', index = False)\n",
-    "student_mat_data.to_csv(r'../data/student-mat-csv.csv')\n"
+    "guardianfinal.to_csv(r'../data/output/student-mat-ohe-detail.csv', index = False)\n",
+    "student_mat_data.to_csv(r'../data/output/student-mat-csv.csv')\n"
    ]
   },
   {
@@ -8561,7 +8561,7 @@
     }
    ],
    "source": [
-    "default_ds.upload_files(files=['../data/student-mat-ohe-detail.csv'], # Upload the csv files in /data\n",
+    "default_ds.upload_files(files=['../data/output/student-mat-ohe-detail.csv'], # Upload the csv files in /data\n",
     "                       target_path='student-ohe-detail-data/', # Put it in a folder path in the datastore\n",
     "                       overwrite=True, # Replace existing files of the same name\n",
     "                       show_progress=True)"
