--- a/notebooks/PandasOneHotEncoding.ipynb
+++ b/notebooks/PandasOneHotEncoding.ipynb
@@ -536,7 +536,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final = student_mat_data.get_dummies(student_mat_data,columns=['school','sex','address','famsize','Pstatus','Mjob','Fjob','reason','guardian'])"
+    "final = pd.get_dummies(student_mat_data,columns=['school','sex','address','famsize','Pstatus','Mjob','Fjob','reason','guardian'])\n",
+    "final"
    ]
   },
   {
@@ -559,7 +560,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "finalk1 = student_mat_data.get_dummies(student_mat_data,columns=['school','sex','address','famsize','Pstatus','Mjob','Fjob','reason','guardian'],drop_first=True)"
+    "finalk1 = pd.get_dummies(student_mat_data,columns=['school','sex','address','famsize','Pstatus','Mjob','Fjob','reason','guardian'],drop_first=True)\n",
+    "finalk1"
    ]
   },
   {
