--- a/notebooks/PandasOneHotEncoding.ipynb
+++ b/notebooks/PandasOneHotEncoding.ipynb
@@ -892,6 +892,14 @@
     "    dataset = Dataset.get_by_name(ws, dataset_name)\n",
     "    print(\"\\t\", dataset.name, 'version', dataset.version)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c29ee2f4",
+   "metadata": {},
+   "source": [
+    "Note: Their is a koalas.get_dummies in databricks https://koalas.readthedocs.io/en/latest/reference/api/databricks.koalas.get_dummies.html"
+   ]
   }
  ],
  "metadata": {
