--- a/notebooks/PandasOneHotEncodingDetail.ipynb
+++ b/notebooks/PandasOneHotEncodingDetail.ipynb
@@ -9223,48 +9223,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "2a80309a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Datasets:\n",
-      "\t student dataset version 1\n",
-      "\t MD-HospLOSdesigner-Train_Model-Trained_model-3c75684f version 1\n",
-      "\t HospitalLOS version 1\n",
-      "\t address version 1\n",
-      "\t synapticjunction-studentmath-20210511040538-dataset version 1\n",
-      "\t MD-StudentPerformance-04-30-2021-Train_Model-Trained_model-af0162ef version 1\n",
-      "\t DemoStudentMath version 1\n",
-      "\t synapticjunction-covid19metadata-20210329083946-dataset version 1\n",
-      "\t synapticjunction-covid19metadata-20210317093124-dataset version 1\n",
-      "\t synapticjunction-covid19metadata-20210302084426-dataset version 1\n",
-      "\t synapticjunction-covid19metadata-20210228122226-dataset version 1\n",
-      "\t covid-chestxray-dataset-metadata.csv version 2\n",
-      "\t chestxray version 2\n",
-      "\t TD-Diabetes_Training-Normalize_Data-Transformation_function-48bf55f4 version 1\n",
-      "\t MD-Diabetes_Training-Train_Model-Trained_model-ab34a0f4 version 1\n",
-      "\t diabetes-data version 1\n",
-      "\t TD-Pipeline-Created-on-02-24-2021-Clean_Missing_Data-Cleaning_transformation-bedba307 version 2\n",
-      "\t TD-Pipeline-Created-on-02-24-2021-Normalize_Data-Transformation_function-15d931b9 version 2\n",
-      "\t MD-Pipeline-Created-on-02-24-2021-Train_Model-Trained_model-731e07be version 2\n",
-      "\t covid-chestxray-dataset version 1\n",
-      "\t bike-rentals version 1\n",
-      "\t Covid19 version 3\n",
-      "\t Trip version 1\n",
-      "\t StudentMathCSV version 1\n",
-      "\t StudentMath version 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Datasets:\")\n",
     "for dataset_name in list(ws.datasets.keys()):\n",
     "    dataset = Dataset.get_by_name(ws, dataset_name)\n",
     "    print(\"\\t\", dataset.name, 'version', dataset.version)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f15803f2",
+   "metadata": {},
+   "source": [
+    "Note: Their is a koalas.get_dummies in databricks https://koalas.readthedocs.io/en/latest/reference/api/databricks.koalas.get_dummies.html"
    ]
   }
  ],
